--- a/index.html
+++ b/index.html
@@ -444,11 +444,11 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h1>Veileder for orden i eget hus</h1>
 <div class="details">
 <span id="author" class="author">Digitaliseringsdirektoratet</span><br>
-<span id="revnumber">version 2.0,</span>
+<span id="revnumber">versjon 2.0,</span>
 <span id="revdate">06.07.2018</span>
 </div>
 <div id="toc" class="toc2">
-<div id="toctitle">Table of Contents</div>
+<div id="toctitle">Innholdsfortegnelse</div>
 <ul class="sectlevel1">
 <li><a href="#_innledning">Innledning</a>
 <ul class="sectlevel2">
@@ -781,7 +781,7 @@ Begynn gjerne med arkivmedarbeidere, seksjonssjefer, avdelingsdirektører eller 
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="images/images/Prioritering.png" alt="Prioritering">
+<img src="images/Prioritering.jpg" alt="Prioritering">
 </div>
 </div>
 <div class="paragraph">
@@ -1077,7 +1077,7 @@ Referanse til informasjonsmodeller er ikke løst i gjeldende versjon av DCAT-AP 
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="images/images/Prosess_begrep_Brreg.png" alt="Prosess begrep Brreg">
+<img src="images/Prosess_begrep_Brreg.jpg" alt="Prosess begrep Brreg">
 </div>
 </div>
 <div class="paragraph">
@@ -1374,7 +1374,7 @@ Den enkelte avdeling i virksomheten bør selv vurdere om de har interesse i begr
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="images/images/Risikovurdering.png" alt="Risikovurdering">
+<img src="images/Risikovurdering.jpg" alt="Risikovurdering">
 </div>
 </div>
 <div class="paragraph">
@@ -1464,7 +1464,7 @@ ga('send', 'pageview');
 <div id="footer">
 <div id="footer-text">
 Versjon 2.0<br>
-Sist oppdatert 2020-06-18 13:11:24 UTC
+Sist oppdatert 2020-06-19 11:25:41 UTC
 </div>
 </div>
 </body>
