deploy: fbc463756e1ce16930e0e4951f303b132f51face

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@ Dersom det oppleves problemer med nedlastet utgave, eksempelvis bilder som mangl
 </li>
 <li>
 <p>Tilgjengeliggjøring av offentlig data:
-<a href="https://data.norge.no/document/del-og-skap-verdier-veileder-i-tilgjengeliggj%C3%B8ring-av-offentlige-data">https://data.norge.no/document/del-og-skap-verdier-veileder-i-tilgjengeliggj%C3%B8ring-av-offentlige-data</a></p>
+<a href="https://data.norge.no/guide/veileder-apne-data/">https://data.norge.no/guide/veileder-apne-data/</a></p>
 </li>
 <li>
 <p>Internkontrollveilederen: <a href="https://internkontroll-infosikkerhet.difi.no/">https://internkontroll-infosikkerhet.difi.no/</a></p>
@@ -620,7 +620,7 @@ Dersom det oppleves problemer med nedlastet utgave, eksempelvis bilder som mangl
 <div class="sect2">
 <h3 id="_hva_mener_vi_med_orden_i_eget_hus"><a class="anchor" href="#_hva_mener_vi_med_orden_i_eget_hus"></a>Hva mener vi med “orden i eget hus”?</h3>
 <div class="paragraph">
-<p>Med orden i eget hus mener vi at “den enkelte virksomhet skal ha oversikt over hvilke data den håndterer, hva dataene betyr, hva de brukes til, hvilke prosesser de inngår i, og hvem som kan bruke dem (informasjonsforvaltning). Dette innebærer også å ta stilling til hvilke data som kan gjøres tilgjengelig for gjenbruk i offentlig sektor, og viderebruk av privat sektor. Offentlige virksomheter må prioritere utveksling av informasjon som andre virksomheter har krav på" <a href="https://www.regjeringen.no/no/dokumenter/digitaliseringsrundskrivet/id2569983/">(Digitaliseringsrundskrivet)</a>.</p>
+<p>Med orden i eget hus mener vi at “den enkelte virksomhet skal ha oversikt over hvilke data den håndterer, hva dataene betyr, hva de brukes til, hvilke prosesser de inngår i, og hvem som kan bruke dem (informasjonsforvaltning). Dette innebærer også å ta stilling til hvilke data som kan gjøres tilgjengelig for gjenbruk i offentlig sektor, og viderebruk av privat sektor. Offentlige virksomheter må prioritere utveksling av informasjon som andre virksomheter har krav på" <a href="https://www.regjeringen.no/no/dokumenter/digitaliseringsrundskrivet/id2683652/">(Digitaliseringsrundskrivet)</a>.</p>
 </div>
 <div class="paragraph">
 <p>For at offentlig sektor skal kunne dele med, og bruke data fra hverandre, er det viktig at de enkelte virksomheter starter med å ha oversikt over egne data, noe som er et prinsipp for god informasjonsforvaltning. Rapporten <a href="https://www.difi.no/sites/difino/files/rapport-informasjonsforvaltning-i-offentleg-sektor-2013-10-10.pdf">"Informasjonsforvaltning i offentlig sektor"</a> konkretiserer stegvis måloppnåelse i 5 punkter med økende ambisjonsnivå:</p>
@@ -663,7 +663,7 @@ Dersom det oppleves problemer med nedlastet utgave, eksempelvis bilder som mangl
 <p>Å sikre forankring kan være krevende. Start med å skape forståelse i egen organisasjon for behovet for å få orden i eget hus.</p>
 </div>
 <div class="paragraph">
-<p>Kontakt ledere og sentrale fagressurser i linjen og i prosjekter, og vis til hva <a href="https://www.regjeringen.no/no/dokumenter/meld.-st.-27-20152016/id2483795/">Digital agenda </a>sier om å holde orden i eget hus og hva <a href="https://www.regjeringen.no/no/dokumenter/digitaliseringsrundskrivet/id2569983/">Digitaliseringsrundskrivet</a> sier om tilrettelegging for gjenbruk og viderebruk av informasjon.  Disse kildene omtaler både samfunnsnytte og gevinster man kan oppnå i egen virksomhet som følge av arbeidet.</p>
+<p>Kontakt ledere og sentrale fagressurser i linjen og i prosjekter, og vis til hva <a href="https://www.regjeringen.no/no/dokumenter/en-digital-offentlig-sektor/id2653874/">Digitaliseringsstrategien</a> sier om å holde orden i eget hus og hva <a href="https://www.regjeringen.no/no/dokumenter/digitaliseringsrundskrivet/id2683652/">Digitaliseringsrundskrivet</a> sier om tilrettelegging for gjenbruk og viderebruk av informasjon.  Disse kildene omtaler både samfunnsnytte og gevinster man kan oppnå i egen virksomhet som følge av arbeidet.</p>
 </div>
 <div class="paragraph">
 <p>Informasjonsforvaltning kan være et vanskelig tema å formidle. Del derfor gjerne arbeidet med å få orden i eget hus opp i håndterbare og konkrete aktiviteter slik at det blir lettere å forstå og ta eierskap til arbeidet. Man kan for eksempel dele arbeidet opp i begrepsarbeid, informasjonsmodellering, registrering av datasett og etablering av API’er.</p>
@@ -678,10 +678,10 @@ Dersom det oppleves problemer med nedlastet utgave, eksempelvis bilder som mangl
 <p>Ta kontakt med andre etater for å bli kjent med andre sine erfaringer. Etatene som har vært med i SKATE- arbeidet har for eksempel vært villig til å dele informasjon om prosesser, organisering av arbeid, rammeverk og  bruk av verktøy.</p>
 </div>
 <div class="paragraph">
-<p>Delta på kurs og arrangementer som gir mer informasjon om temaet, og som gir muligheter for å delta på faglige nettverk. Eksempler på kurs finnes på <a href="https://www.difi.no/opplaeringstilbud/kommende-arrangementer">Difi sin arrangementsoversikt</a>. Difi arrangerer også møter i <a href="https://www.difi.no/fagomrader-og-tjenester/digitalisering-og-samordning/nasjonal-arkitektur/informasjonsforvaltning/fagleg-arena-informasjonsforvaltning">faglig arena for informasjonsforvaltning</a> som det kan være nyttig å delta på for å få innspill til eget arbeid i orden i eget hus.</p>
+<p>Delta på kurs og arrangementer som gir mer informasjon om temaet, og som gir muligheter for å delta på faglige nettverk. Eksempler på kurs finnes på <a href="https://https://www.digdir.no/arrangement/arrangementsoversikt/692?field_end_date_value=1">Digitaliseringsdirektoratet sin arrangementsoversikt</a>. Digitaliseringsdirektoratet arrangerer også møter i <a href="https://www.difi.no/fagomrader-og-tjenester/digitalisering-og-samordning/nasjonal-arkitektur/informasjonsforvaltning/fagleg-arena-informasjonsforvaltning">faglig arena for informasjonsforvaltning</a> som det kan være nyttig å delta på for å få innspill til eget arbeid i orden i eget hus.</p>
 </div>
 <div class="paragraph">
-<p>Ta gjerne kontakt med Difi eller Brønnøysundregistrene <sup class="footnote">[<a id="_footnoteref_1" class="footnote" href="#_footnotedef_1" title="View footnote.">1</a>]</sup> hvis du ønsker noen utenfra til å fortelle om orden i eget hus og datadeling som et nasjonalt løft.</p>
+<p>Ta gjerne kontakt med Digitaliseringsdirektoratet eller Brønnøysundregistrene <sup class="footnote">[<a id="_footnoteref_1" class="footnote" href="#_footnotedef_1" title="View footnote.">1</a>]</sup> hvis du ønsker noen utenfra til å fortelle om orden i eget hus og datadeling som et nasjonalt løft.</p>
 </div>
 </div>
 </div>
@@ -1431,7 +1431,7 @@ ga('send', 'pageview');
 <div id="footnotes">
 <hr>
 <div class="footnote" id="_footnotedef_1">
-<a href="#_footnoteref_1">1</a>. Brreg: <a href="https://www.brreg.no/hvordan-kan-vi-hjelpe-deg/" class="bare">https://www.brreg.no/hvordan-kan-vi-hjelpe-deg/</a> Difi: <a href="mailto:informasjonsforvaltning@difi.no">informasjonsforvaltning@difi.no</a>
+<a href="#_footnoteref_1">1</a>. Digitaliseringsdirektoratet: <a href="mailto:informasjonsforvaltning@digdir.no">informasjonsforvaltning@digdir.no</a>
 </div>
 <div class="footnote" id="_footnotedef_2">
 <a href="#_footnoteref_2">2</a>. Registreringsløsning for Felles datakatalog: <a href="https://registrering-fdk.ppe.brreg.no/loggin" class="bare">https://registrering-fdk.ppe.brreg.no/loggin</a>  Publiseringsløsning for Felles datakatalog: <a href="https://fellesdatakatalog.brreg.no/" class="bare">https://fellesdatakatalog.brreg.no/</a>
@@ -1464,7 +1464,7 @@ ga('send', 'pageview');
 <div id="footer">
 <div id="footer-text">
 Versjon 2.0<br>
-Sist oppdatert 2020-12-03 10:36:07 UTC
+Sist oppdatert 2020-12-08 09:46:11 UTC
 </div>
 </div>
 </body>
