deploy: b8d90ff31d0656d49f09dcac06010d43391cae1c

--- a/index.html
+++ b/index.html
@@ -446,8 +446,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h1>Veileder for orden i eget hus</h1>
 <div class="details">
 <span id="author" class="author">Digitaliseringsdirektoratet</span><br>
-<span id="revnumber">versjon 2.0,</span>
-<span id="revdate">06.07.2018</span>
+<span id="revnumber">versjon 2.0.1,</span>
+<span id="revdate">13.01.2021</span>
 </div>
 <div id="toc" class="toc2">
 <div id="toctitle">Innholdsfortegnelse</div>
@@ -496,7 +496,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="paragraph">
-<p>Publisert: 2018-06-07</p>
+<p>Publisert: 2018-06-07
+Oppdatert: 2021-01-13 (kun redaksjonelle endringer)</p>
 </div>
 <div class="admonitionblock tip">
 <table>
@@ -507,6 +508,19 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <td class="content">
 Dette dokumentet kan også lastes ned <a href="document.pdf">som PDF</a>.
 Dersom det oppleves problemer med nedlastet utgave, eksempelvis bilder som mangler eller lenker som ikke fungerer, ber vi om at man benytter versjonen tilgjengelig på nett for de aktuelle delene.
+</td>
+</tr>
+</table>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Merk"></i>
+</td>
+<td class="content">
+<strong>Innmelding av feil og mangler:</strong><br>
+Dersom du finner feil eller mangler i dokumentet, ber vi om at dette meldes inn på <a href="https://github.com/Informasjonsforvaltning/veileder-orden-i-eget-hus/issues">Github Issues</a>. Dersom du ikke allerede har bruker på Github kan du opprette bruker gratis.
 </td>
 </tr>
 </table>
@@ -1332,8 +1346,8 @@ ga('send', 'pageview');
 </div>
 <div id="footer">
 <div id="footer-text">
-Versjon 2.0<br>
-Sist oppdatert 2021-01-13 13:09:24 UTC
+Versjon 2.0.1<br>
+Sist oppdatert 2021-01-14 09:48:58 UTC
 </div>
 </div>
 </body>
