--- a/index.html
+++ b/index.html
@@ -496,8 +496,8 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="paragraph">
-<p>Publisert: 2018-06-07
-Oppdatert: 2021-01-13 (kun redaksjonelle endringer)</p>
+<p>*Publisert: 2018-06-07<br>
+*Oppdatert: 2021-01-13 (kun redaksjonelle endringer)</p>
 </div>
 <div class="admonitionblock tip">
 <table>
@@ -1347,7 +1347,7 @@ ga('send', 'pageview');
 <div id="footer">
 <div id="footer-text">
 Versjon 2.0.1<br>
-Sist oppdatert 2021-01-14 09:48:58 UTC
+Sist oppdatert 2021-01-15 08:23:50 UTC
 </div>
 </div>
 </body>
