deploy: 3996f7545ff63c90677c1bc1c9fcb39774cba286

--- a/index.html
+++ b/index.html
@@ -701,6 +701,14 @@ Dersom du finner feil eller mangler i dokumentet, ber vi om at dette meldes inn 
 <div class="sect1">
 <h2 id="_hvordan_skape_orden_i_eget_hus"><a class="anchor" href="#_hvordan_skape_orden_i_eget_hus"></a>Hvordan skape orden i eget hus?</h2>
 <div class="sectionbody">
+<div class="imageblock">
+<div class="content">
+<img src="images/OiEH_sirkel.png" alt="OiEH sirkel">
+</div>
+</div>
+<div class="paragraph">
+<p>Nødvendige steg for å skape Orden i eget hus</p>
+</div>
 <div class="sect2">
 <h3 id="_modenhetsmåling"><a class="anchor" href="#_modenhetsmåling"></a>Modenhetsmåling</h3>
 <div class="paragraph">
@@ -986,7 +994,7 @@ Arbeidet med å videreutvikle standard og løsning for en mer detaljert beskrive
 <p>En datakatalog er en sammenstilling av strukturerte beskrivelser av datasett. Felles datakatalog inneholder også beskrivelser av begreper, APIer og informasjonsmodeller. En datakatalog inneholder gjerne pekere til hvor datasettene finnes (lenke til distribusjoner), men inneholder altså ikke selve datasettene.  I Norge er <a href="https://data.norge.no/specification/dcat-ap-no/">Standard for beskrivelse av datasett, datatjenester og datakataloger</a> (DCAT-AP-NO) anbefalt for alle offentlige virksomheter. Eksempler på opplysninger i en datasettbeskrivelse er tittel, beskrivelse, utgiver,  kontaktpunkt, gyldighetsperiode og dekningsområde. En gjennomgang av alle de obligatoriske, anbefalte og valgfrie feltene og hvordan disse skal fylles ut finnes i <a href="https://data.norge.no/guide/veileder-beskrivelse-av-datasett/">veilederen for beskrivelse av datasett</a>.</p>
 </div>
 <div class="paragraph">
-<p><a href="https://data.norge.no/">Felles datakatalog</a> er en nasjonal katalog over datasett, og det enkelte datasett er beskrevet i henhold til nevnte standard. Datasett kan enten beskrives og registreres direkte i Felles datakatalog, eller virksomheten kan etablere en virksomhetsintern datakatalog som Felles datakatalog høster fra.</p>
+<p><a href="https://data.norge.no/">Felles datakatalog</a> er en nasjonal katalog over datasett, begrep, APIer og informasjonsmodeller. Det enkelte datasett er beskrevet i henhold til nevnte standard. Datasett kan enten beskrives og registreres direkte i Felles datakatalog, eller virksomheten kan etablere en virksomhetsintern datakatalog som Felles datakatalog høster fra.</p>
 </div>
 <div class="paragraph">
 <p>En virksomhetsintern datakatalog kan være nyttig for å få en tettere kobling mellom beskrivelsene og selve datasettene. Enkeltopplysninger kan da hentes maskinelt fra kilden, som for eksempel når datasettet sist ble oppdatert (endringsdato).</p>
@@ -1066,11 +1074,15 @@ Arbeidet med å videreutvikle standard og løsning for en mer detaljert beskrive
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="images/Prosess_begrep_Brreg.jpg" alt="Prosess begrep Brreg">
+<img src="images/Hovedprosess%20Brreg%20ny.png" alt="Hovedprosess Brreg ny">
 </div>
 </div>
 <div class="paragraph">
-<p><em>Figur 2_</em>:Prosess i begrepsarbeid</p>
+<p>Eksempel på prosess i begrepsarbeid</p>
+</div>
+<div class="paragraph">
+<p>image::delprosess Godkjenne begrep_brreg ny.png
+Eksempel på delprosess for godkjenning av begrep</p>
 </div>
 <div class="sect3">
 <h4 id="_roller_i_begrepsarbeidet"><a class="anchor" href="#_roller_i_begrepsarbeidet"></a>Roller i begrepsarbeidet</h4>
@@ -1450,7 +1462,7 @@ ga('send', 'pageview');
 <div id="footer">
 <div id="footer-text">
 Versjon 2.0.1<br>
-Sist oppdatert 2021-01-18 09:27:49 UTC
+Sist oppdatert 2021-01-29 13:48:10 UTC
 </div>
 </div>
 </body>
