deploy: c9f7bbf6bf50221387449b4e2bb19e6ddfffef94

--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@ Dersom du finner feil eller mangler i dokumentet, ber vi om at dette meldes inn 
 </div>
 </div>
 <div class="paragraph">
-<p>Nødvendige steg for å skape Orden i eget hus</p>
+<p>Illustrasjon av nødvendige steg for å skape Orden i eget hus</p>
 </div>
 <div class="sect2">
 <h3 id="_modenhetsmåling"><a class="anchor" href="#_modenhetsmåling"></a>Modenhetsmåling</h3>
@@ -1070,7 +1070,7 @@ Arbeidet med å videreutvikle standard og løsning for en mer detaljert beskrive
 <p>En vanlig utfordring er at begrepsarbeid ofte starter i forbindelse med større prosjekter der begrepsarbeid ikke nødvendigvis er hovedsaken, men nødvendig for et godt resultat. Utfordringen vil da ofte være å få dette begrepsarbeidet over i en driftsfase (med inkludering av nye begreper og oppdatering) når det opprinnelige prosjektet avsluttes. Det er viktig at noen får ansvar for å koordinere begrepsarbeidet på tvers i en virksomhet. Dersom en bruker begreper som kommer fra andre, eller hvis en vet at andre jobber innenfor samme fagområde, vil det være lurt å sjekke om andres begrepsbeskrivelser kan brukes.</p>
 </div>
 <div class="paragraph">
-<p>Begrepenes livssyklus bør defineres gjennom en prosess, se eksempel under. Prosessen bør også ta høyde for endringer og revisjoner (nye versjoner etter godkjenning)<sup class="footnote">[<a id="_footnoteref_3" class="footnote" href="#_footnotedef_3" title="View footnote.">3</a>]</sup>.</p>
+<p>Begrepenes livssyklus bør defineres gjennom en prosess, se eksempel under. Prosessen bør også ta høyde for endringer og revisjoner (nye versjoner etter godkjenning).</p>
 </div>
 <div class="imageblock">
 <div class="content">
@@ -1078,11 +1078,15 @@ Arbeidet med å videreutvikle standard og løsning for en mer detaljert beskrive
 </div>
 </div>
 <div class="paragraph">
-<p>Eksempel på prosess i begrepsarbeid</p>
+<p>Eksempel på prosess i begrepsarbeid (<a href="https://github.com/Informasjonsforvaltning/veileder-orden-i-eget-hus/blob/master/docs/images/Hovedprosess%20Brreg%20ny.png">lenke til større versjon</a>)</p>
+</div>
+<div class="imageblock">
+<div class="content">
+<img src="images/delprosess%20Godkjenne%20begrep_brreg%20ny.png" alt="delprosess Godkjenne begrep brreg ny">
+</div>
 </div>
 <div class="paragraph">
-<p>image::delprosess Godkjenne begrep_brreg ny.png
-Eksempel på delprosess for godkjenning av begrep</p>
+<p>Eksempel på delprosess for godkjenning av begrep (<a href="https://github.com/Informasjonsforvaltning/veileder-orden-i-eget-hus/blob/master/docs/images/delprosess%20Godkjenne%20begrep_brreg%20ny.png">lenke til større versjon</a>)</p>
 </div>
 <div class="sect3">
 <h4 id="_roller_i_begrepsarbeidet"><a class="anchor" href="#_roller_i_begrepsarbeidet"></a>Roller i begrepsarbeidet</h4>
@@ -1134,10 +1138,10 @@ Eksempel på delprosess for godkjenning av begrep</p>
 <p>følge med på at begrepene blir utarbeidet etter retningslinjene til rammeverket, og hjelpe begrepseiere (se under) med å følge disse.</p>
 </li>
 <li>
-<p>ha ansvar, i samråd med evt koordinatorer på den enkelte avdeling,<sup class="footnote">[<a id="_footnoteref_4" class="footnote" href="#_footnotedef_4" title="View footnote.">4</a>]</sup> for plassering av eierskap til begrepene</p>
+<p>ha ansvar, i samråd med evt koordinatorer på den enkelte avdeling,<sup class="footnote">[<a id="_footnoteref_3" class="footnote" href="#_footnotedef_3" title="View footnote.">3</a>]</sup> for plassering av eierskap til begrepene</p>
 </li>
 <li>
-<p>kontrollere at evt. status <sup class="footnote">[<a id="_footnoteref_5" class="footnote" href="#_footnotedef_5" title="View footnote.">5</a>]</sup> til begrepene er plassert riktig i forhold til hvor langt man har kommet i utarbeidelses- og kvalitetssikringsprosessen</p>
+<p>kontrollere at evt. status <sup class="footnote">[<a id="_footnoteref_4" class="footnote" href="#_footnotedef_4" title="View footnote.">4</a>]</sup> til begrepene er plassert riktig i forhold til hvor langt man har kommet i utarbeidelses- og kvalitetssikringsprosessen</p>
 </li>
 <li>
 <p>ha oversikt over helheten og bidra til harmonisering av innhold</p>
@@ -1321,7 +1325,7 @@ Den enkelte avdeling i virksomheten bør selv vurdere om de har interesse i begr
 <p>Innovasjon er en samlebetegnelse for vellykket fornyelse. Når økonomier endrer seg raskt er innovasjon nødvendig for å opprettholde og utvikle vår konkurranseevne og vår velstand.</p>
 </div>
 <div class="paragraph">
-<p>Data ligger til grunn for hvordan vi løser oppgaver nå og fremover. Det har innvirkning på hvordan offentlige oppgaver organiseres og utformes. For å få til den nødvendige endringen må offentlig sektor ha kontroll på egne data som grunnlag for redesign av virksomheten på alle nivå - folk, prosesser, teknologi og styring.<sup class="footnote">[<a id="_footnoteref_6" class="footnote" href="#_footnotedef_6" title="View footnote.">6</a>]</sup></p>
+<p>Data ligger til grunn for hvordan vi løser oppgaver nå og fremover. Det har innvirkning på hvordan offentlige oppgaver organiseres og utformes. For å få til den nødvendige endringen må offentlig sektor ha kontroll på egne data som grunnlag for redesign av virksomheten på alle nivå - folk, prosesser, teknologi og styring.<sup class="footnote">[<a id="_footnoteref_5" class="footnote" href="#_footnotedef_5" title="View footnote.">5</a>]</sup></p>
 </div>
 <div class="paragraph">
 <p>Innlåsning til en leverandør kan hemme innovasjon, og gi dårligere kostnadseffektivitet enn virksomheten kan oppnå ved hyppigere konkurranseutsetting. <a href="https://www.fintlabs.no/#/">FINT-prosjektet</a> (Felles Fylkeskommunale INTegrasjone) leverer en informasjonsmodell og et API for kommunikasjon som kan legges som grunnlag for fremtidige kjøp av nye systemer (krav), forbedring av eksisterende tjenester og utvikling av nye tjenester. Ting gjøres en gang og likt hos alle fylkeskommuner og en unngår innlåsing.</p>
@@ -1344,7 +1348,7 @@ Den enkelte avdeling i virksomheten bør selv vurdere om de har interesse i begr
 <p>oversikt over behandling av personopplysninger for å ivareta personvern</p>
 </li>
 <li>
-<p>oversikt over all informasjonsbehandling, inkludert potensielle konsekvenser ved brudd på informasjonssikkerhet <sup class="footnote">[<a id="_footnoteref_7" class="footnote" href="#_footnotedef_7" title="View footnote.">7</a>]</sup>, for å ivareta informasjonssikkerhet på en god måte</p>
+<p>oversikt over all informasjonsbehandling, inkludert potensielle konsekvenser ved brudd på informasjonssikkerhet <sup class="footnote">[<a id="_footnoteref_6" class="footnote" href="#_footnotedef_6" title="View footnote.">6</a>]</sup>, for å ivareta informasjonssikkerhet på en god måte</p>
 </li>
 </ul>
 </div>
@@ -1385,7 +1389,7 @@ Den enkelte avdeling i virksomheten bør selv vurdere om de har interesse i begr
 <div class="sect2">
 <h3 id="_lovverk"><a class="anchor" href="#_lovverk"></a>Lovverk</h3>
 <div class="paragraph">
-<p>Krav om orden i eget hus følger av regelverk om internkontroll, informasjonssikkerhet, personvern og arkiv, hvor oversikt over egen informasjon er grunnleggende.<sup class="footnote">[<a id="_footnoteref_8" class="footnote" href="#_footnotedef_8" title="View footnote.">8</a>]</sup></p>
+<p>Krav om orden i eget hus følger av regelverk om internkontroll, informasjonssikkerhet, personvern og arkiv, hvor oversikt over egen informasjon er grunnleggende.<sup class="footnote">[<a id="_footnoteref_7" class="footnote" href="#_footnotedef_7" title="View footnote.">7</a>]</sup></p>
 </div>
 <div class="sect3">
 <h4 id="_offentleglova"><a class="anchor" href="#_offentleglova"></a>Offentleglova</h4>
@@ -1393,7 +1397,7 @@ Den enkelte avdeling i virksomheten bør selv vurdere om de har interesse i begr
 <p>Retten til innsyn i offentlig informasjon er regulert i Offentleglova. Det er samme rett til tilgang til data som til dokumenter, og i 2017 ble det lagt til krav om å utlevere data på maskinlesbart format.</p>
 </div>
 <div class="paragraph">
-<p>Da Offentleglova ble vedtatt i 1970 ble det sett på som lite tilfredsstillende å gi folk en rettighet uten også å gi en oversikt over det man kunne be om innsyn i. Derfor fikk vi offentlig postjournal. Idag er det klart at det kun er en brøkdel av forvaltningens informasjon som er opplistet i offentlig postjournal. I forlengelsen av dette kan vi si at en oversikt over virksomhetens data en nødvendig forutsetning for at befolkningen skal kunne nyttiggjøre seg den retten de har gjennom Offentleglova.<sup class="footnote">[<a id="_footnoteref_9" class="footnote" href="#_footnotedef_9" title="View footnote.">9</a>]</sup></p>
+<p>Da Offentleglova ble vedtatt i 1970 ble det sett på som lite tilfredsstillende å gi folk en rettighet uten også å gi en oversikt over det man kunne be om innsyn i. Derfor fikk vi offentlig postjournal. Idag er det klart at det kun er en brøkdel av forvaltningens informasjon som er opplistet i offentlig postjournal. I forlengelsen av dette kan vi si at en oversikt over virksomhetens data en nødvendig forutsetning for at befolkningen skal kunne nyttiggjøre seg den retten de har gjennom Offentleglova.<sup class="footnote">[<a id="_footnoteref_8" class="footnote" href="#_footnotedef_8" title="View footnote.">8</a>]</sup></p>
 </div>
 <div class="paragraph">
 <p>I samsvar med viderebruksbestemmelsene i Offentleglova skal virksomheten gjøre egnet informasjon tilgjengelig i maskinlesbare formater, fortrinnsvis gjennom API&#8217;er og “virksomheter som etablerer nye eller oppgraderer eksisterende fagsystemer eller digitale tjenester, skal legge til rette for at data fra disse tjenestene kan gjøres tilgjengelige i maskinlesbare formater.”</p>
@@ -1438,31 +1442,28 @@ ga('send', 'pageview');
 <a href="#_footnoteref_2">2</a>. Publisere i Felles datakatalog: <a href="https://data.norge.no/publishing" class="bare">https://data.norge.no/publishing</a>
 </div>
 <div class="footnote" id="_footnotedef_3">
-<a href="#_footnoteref_3">3</a>. I dette eksempelet er ikke revisjonsprosess tatt med.
+<a href="#_footnoteref_3">3</a>. Det kan være nyttig å vurdere avdelingskoordinatorer som bistår i den enkelte avdeling, og som således er begrepskoordinatorens “utstrakte arm” i organisasjonen.
 </div>
 <div class="footnote" id="_footnotedef_4">
-<a href="#_footnoteref_4">4</a>. Det kan være nyttig å vurdere avdelingskoordinatorer som bistår i den enkelte avdeling, og som således er begrepskoordinatorens “utstrakte arm” i organisasjonen.
+<a href="#_footnoteref_4">4</a>. I prosessen kan man benytte statuser for å indikere hvor ferdig begrepsbeskrivelsene er. Eksempel: Utkast, Kandidat for godkjenning, Godkjent.Med statuser kan man også angi at en begrepsbeskrivelse er under revisjon.
 </div>
 <div class="footnote" id="_footnotedef_5">
-<a href="#_footnoteref_5">5</a>. I prosessen kan man benytte statuser for å indikere hvor ferdig begrepsbeskrivelsene er. Eksempel: Utkast, Kandidat for godkjenning, Godkjent.Med statuser kan man også angi at en begrepsbeskrivelse er under revisjon.
+<a href="#_footnoteref_5">5</a>. Mer om digital transformasjon på Digdirs sider: <a href="https://www.digdir.no/digitalisering-og-samordning/digital-transformasjon/1589" class="bare">https://www.digdir.no/digitalisering-og-samordning/digital-transformasjon/1589</a>
 </div>
 <div class="footnote" id="_footnotedef_6">
-<a href="#_footnoteref_6">6</a>. Mer om digital transformasjon på Digdirs sider: <a href="https://www.digdir.no/digitalisering-og-samordning/digital-transformasjon/1589" class="bare">https://www.digdir.no/digitalisering-og-samordning/digital-transformasjon/1589</a>
+<a href="#_footnoteref_6">6</a>. Ofte kalt «verdivurdering»
 </div>
 <div class="footnote" id="_footnotedef_7">
-<a href="#_footnoteref_7">7</a>. Ofte kalt «verdivurdering»
+<a href="#_footnoteref_7">7</a>. Meld.St. 27 Digital agenda for Norge s. 49
 </div>
 <div class="footnote" id="_footnotedef_8">
-<a href="#_footnoteref_8">8</a>. Meld.St. 27 Digital agenda for Norge s. 49
-</div>
-<div class="footnote" id="_footnotedef_9">
-<a href="#_footnoteref_9">9</a>. Då Stortinget vedtok offentleglova i 1970 trossa dei anbefalinga frå regjeringa og slo fast at ein rett til innsyn i saksbehandlinga i forvaltinga ikkje kunne fungere utan at ein samstundes fekk tilgang til ein postjournal som viste kva ein kunne be om innsyn i: «Det synes prinsipielt lite tilfredsstillende å innføre et offentlighetsprinsipp, uten samtidig å gi dem som har rettigheter etter dette, rimelige muligheter til å kunne benytte sin rett til å gjøre seg kjent med forvaltningens saker.» Innst. O. XIV (1969-70) s. 11, sitert etter NOU 2003:30 «Ny offentlighetslov», kap. 8.4.5. Sjå: <a href="http://www.regjeringen.no/nb/dep/jd/dok/nouer/2003/nou2003-30/9.html?id=382963" class="bare">http://www.regjeringen.no/nb/dep/jd/dok/nouer/2003/nou2003-30/9.html?id=382963</a>
+<a href="#_footnoteref_8">8</a>. Då Stortinget vedtok offentleglova i 1970 trossa dei anbefalinga frå regjeringa og slo fast at ein rett til innsyn i saksbehandlinga i forvaltinga ikkje kunne fungere utan at ein samstundes fekk tilgang til ein postjournal som viste kva ein kunne be om innsyn i: «Det synes prinsipielt lite tilfredsstillende å innføre et offentlighetsprinsipp, uten samtidig å gi dem som har rettigheter etter dette, rimelige muligheter til å kunne benytte sin rett til å gjøre seg kjent med forvaltningens saker.» Innst. O. XIV (1969-70) s. 11, sitert etter NOU 2003:30 «Ny offentlighetslov», kap. 8.4.5. Sjå: <a href="http://www.regjeringen.no/nb/dep/jd/dok/nouer/2003/nou2003-30/9.html?id=382963" class="bare">http://www.regjeringen.no/nb/dep/jd/dok/nouer/2003/nou2003-30/9.html?id=382963</a>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
 Versjon 2.0.1<br>
-Sist oppdatert 2021-01-29 13:48:10 UTC
+Sist oppdatert 2021-01-29 14:31:02 UTC
 </div>
 </div>
 </body>
